<resources>
    <string name="search">Search</string>
    <string name="go_back_button">Back</string>
    <string name="list_of_events">Current Events</string>
    <string name="app_name">Current</string>
    <string name="title_activity_maps">Current</string>
    <string name="post_text">Post</string>
    <string name="settings_text">Settings</string>
    <string name="events_text">Events</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Description</string>
    <string name="event_type">Event Type</string>
    <string name="cancel">Cancel</string>
    <string name="close_text">Close</string>
    <string name="author_name_text">Author</string>
    <string name="down_vote_text">DownVote</string>
    <string name="up_vote_text">UpVote</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="register_text">Register</string>
    <string name="posted_by_text">Posted by:</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="eventPic">eventPic</string>>
    <string name="username_text">Username</string>
    <string name="save_and_exit">Save</string>
    <string name="avatar">Avatar</string>


    <string-array name="event_types">
        <item>Academic</item>
        <item>Entertainment</item>
        <item>Social</item>
        <item>Other</item>
    </string-array>

    <string-array name="sorted_events">
        <item>All</item>
        <item>Academic</item>
        <item>Entertainment</item>
        <item>Social</item>
        <item>Other</item>
    </string-array>

    <string-array name="avatar_types">
        <item>Duck</item>
        <item>Panda</item>
        <item>Tiger</item>

    </string-array>
</resources>
